--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,5 @@
     "tabWidth": 2,
     "semi": true,
     "singleQuote": true,
-    "plugins": ["prettier-plugin-organize-imports", "prettier prettier-plugin-tailwindcss"]
+    "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
   }
